--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = highctidh
-version = 2023.06.22
+version = file: VERSION
 author = Jacob Appelbaum
 description = Python ctype bindings for highctidh
 long_description = Python ctype bindings for highctidh released in 2021
@@ -10,6 +10,3 @@ license = Public Domain
 
 [options]
 python_requires = >=3.10.4
-
-[options.extras_require]
-test = pytest
