package improvements; stage version 1.0.2023112300

--- a/Makefile.packages
+++ b/Makefile.packages
@@ -2,7 +2,7 @@ VERSION := $(shell cat VERSION)
 WORKDIR ?= /highctidh/
 export SOURCE_DATE_EPOCH := $(shell git log -1 --pretty=%ct)
 ARCH := $(shell uname -m)
-.PHONY: deb wheel test packages sdist
+.PHONY: deb wheel test packages sdist pypi-upload prepare-artefacts-for-upload
 DEB_NAME := ${WORKDIR}/deb_dist/python3-highctidh_${VERSION}-1_${ARCH}.deb
 WHEEL_NAME := ${WORKDIR}/dist/highctidh-${VERSION}-cp311-cp311-linux_${ARCH}.whl
 SDIST_GZ := ${WORKDIR}/dist/highctidh-${VERSION}.tar.gz
@@ -12,9 +12,9 @@ version:
 
 deb: ${SDIST_GZ} ${DEB_NAME}
 ${DEB_NAME}:
-	python3 setup.py --command-packages=stdeb.command sdist_dsc --compat=10 --dist-dir ${WORKDIR}/dist/ --use-premade-distfile=${DEB_NAME}
-	cp misc/debian-rules deb_dist/highctidh-$(VERSION)/debian/rules
-	cd deb_dist/highctidh-$(VERSION) && CC=${CC} dpkg-buildpackage -rfakeroot -uc -us
+	python3 setup.py --command-packages=stdeb.command sdist_dsc --compat=10 --dist-dir=${WORKDIR}/dist/ --use-premade-distfile=${SDIST_GZ}
+	cp ${WORKDIR}/misc/debian-rules ${WORKDIR}/dist/highctidh-$(VERSION)/debian/rules
+	cd ${WORKDIR}/dist/highctidh-$(VERSION) && CC=${CC} dpkg-buildpackage -rfakeroot -uc -us
 
 wheel: ${SDIST_GZ} ${WHEEL_NAME}
 ${WHEEL_NAME}:
@@ -48,6 +48,37 @@ docker-setup-multiarch:
 
 docker-clean:
 	./docker-clean.sh
+
+# NOTE:
+#   twine accepts our whl files but pypi does not due to not using the
+#   `manywheels` docker trusting trust container
+pypi-upload:
+	python3 -m twine check ${WORKDIR}/docker_build_output/upload/*$(VERSION)*.tar.gz
+	python3 -m twine upload --repository pypi ${WORKDIR}/docker_build_output/upload/*$(VERSION)*.tar.gz
+
+prepare-artefacts-for-upload:
+	mkdir -p ${WORKDIR}/docker_build_output/upload/build-artefacts;
+	for arch in $(shell ls -1  ${WORKDIR}/docker_build_output |grep -v upload); do \
+		echo "Copying deb and whl builds..."; \
+		cp -v ${WORKDIR}/docker_build_output/$$arch/dist/*.deb \
+			${WORKDIR}/docker_build_output/upload/build-artefacts/ && \
+		cp -v ${WORKDIR}/docker_build_output/$$arch/dist/*.whl \
+			${WORKDIR}/docker_build_output/upload/build-artefacts/; \
+	done
+	for arch in $(shell ls -1  ${WORKDIR}/docker_build_output |grep -v upload); do \
+		cd ${WORKDIR}/docker_build_output/$$arch/dist/ && \
+		echo "Creating $$arch artefact tar.gz..." && \
+		tar -cvzf \
+		highctidh_1.0.2023112000-$$arch-src.tar.gz.new \
+		*.buildinfo \
+		*.changes \
+		*.dsc \
+		*.tar.gz \
+		*.tar.xz && \
+		mv -v highctidh_1.0.2023112000-$$arch-src.tar.gz.new \
+			../../upload/build-artefacts/highctidh_1.0.2023112000-$$arch-src.tar.gz && \
+		cd ../../../; \
+	done
 
 # This target calls the other targets present in this makefile from within a Docker container.
 # Our use of QEMU means that the Docker container appears to be running on
