--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = file: VERSION
 author = Jacob Appelbaum
 description = Python ctype bindings for highctidh
 long_description = Python ctype bindings for highctidh released in 2021
-url = https://ctidh.isogeny.org/software.html
+url = https://codeberg.org/vula/highctidh
 keywords = post-quantum cryptography, cryptography, ctidh, csidh
 license = Public Domain
 
