change woodpecker build

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -5,6 +5,7 @@ steps:
     commands:
       - export CI=true
       - PATH=$PATH:~/.local/bin
+      - export WORKDIR=`pwd`
       - apt update
       - apt install -y --no-install-recommends make gcc clang git python3 python3-build python3-setuptools build-essential python3-venv python3-wheel python3-pip flit
       - make -f Makefile.packages wheel
