--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -27,3 +27,14 @@ steps:
       - ls -alh dist/*.whl
       - sha256sum dist/*.whl
       - sha256sum *.so
+  build-debian-bookworm-golang:
+    group: compile
+    image: debian:bookworm-slim
+    commands:
+      - export CI=true
+      - PATH=$PATH:~/.local/bin
+      - export WORKDIR=`pwd`
+      - dpkg --add-architecture i386
+      - apt update
+      - apt install -y --no-install-recommends make gcc clang git build-essential gcc-mips64-linux-gnuabi64 gcc-mips64el-linux-gnuabi64 gcc-powerpc64le-linux-gnu gcc-riscv64-linux-gnu gcc-s390x-linux-gnu gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi golang ca-certificates libc6-arm64-cross libc6-armel-cross libc6-armhf-cross libc6-dev-arm64-cross libc6-dev-armel-cross libc6-dev-armhf-cross libc6-dev-mips32-mips64-cross libc6-dev-mips32-mips64el-cross libc6-dev-mips64-cross libc6-dev-mips64el-cross libc6-dev-mipsn32-mips64-cross libc6-dev-mipsn32-mips64el-cross libc6-dev-powerpc-ppc64-cross libc6-dev-ppc64-cross libc6-dev-ppc64el-cross libc6-dev-riscv64-cross libc6-dev-s390x-cross libc6-dev-sparc64-cross libc6-dev-sparc-sparc64-cross libc6-dev-i386 libc6-i386 linux-libc-dev linux-libc-dev:i386 
+      - make -f Makefile.packages go-test-cross
