--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -8,11 +8,23 @@ steps:
       - export WORKDIR=`pwd`
       - apt update
       - apt install -y --no-install-recommends make gcc clang git python3 python3-build python3-setuptools build-essential python3-venv python3-wheel python3-pip flit
-      - make -f Makefile.packages wheel
       - make
-      - ls -alh dist/*.whl
-      - sha256sum dist/*.whl
       - sha256sum *.so
+  build-debian-bookworm-python:
+    group: compile
+    image: debian:bookworm
+    commands:
+      - export CI=true
+      - PATH=$PATH:~/.local/bin
+      - export WORKDIR=`pwd`
+      - ./misc/install-debian-deps.sh
+      - make -f Makefile.packages packages
+      - dpkg -i dist/python3-highctidh_*.deb
+      - pytest-3 -v -n`nproc` --doctest-modules
+      - sha256sum dist/*.deb
+      - ls -alh dist/*.deb
+      - sha256sum dist/*.whl
+      - ls -alh dist/*.whl
   build-alpine-3.18:
     group: compile
     image: alpine:3.18
@@ -34,7 +46,5 @@ steps:
       - export CI=true
       - PATH=$PATH:~/.local/bin
       - export WORKDIR=`pwd`
-      - dpkg --add-architecture i386
-      - apt update
-      - apt install -y --no-install-recommends make gcc clang git build-essential gcc-mips64-linux-gnuabi64 gcc-mips64el-linux-gnuabi64 gcc-powerpc64le-linux-gnu gcc-riscv64-linux-gnu gcc-s390x-linux-gnu gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi golang ca-certificates libc6-arm64-cross libc6-armel-cross libc6-armhf-cross libc6-dev-arm64-cross libc6-dev-armel-cross libc6-dev-armhf-cross libc6-dev-mips32-mips64-cross libc6-dev-mips32-mips64el-cross libc6-dev-mips64-cross libc6-dev-mips64el-cross libc6-dev-mipsn32-mips64-cross libc6-dev-mipsn32-mips64el-cross libc6-dev-powerpc-ppc64-cross libc6-dev-ppc64-cross libc6-dev-ppc64el-cross libc6-dev-riscv64-cross libc6-dev-s390x-cross libc6-dev-sparc64-cross libc6-dev-sparc-sparc64-cross libc6-dev-i386 libc6-i386 linux-libc-dev linux-libc-dev:i386 
+      - ./misc/install-debian-go-deps.sh
       - make -f Makefile.packages go-test-cross
