--- a/Makefile.packages
+++ b/Makefile.packages
@@ -2,6 +2,7 @@ VERSION := $(shell cat VERSION)
 export WORKDIR ?= /highctidh
 export SOURCE_DATE_EPOCH := $(shell git log -1 --pretty=%ct)
 ARCH := $(shell uname -m)
+PODMAN_ARCH ?= ${ARCH}
 .PHONY: deb wheel test packages sdist pypi-upload prepare-artifacts-for-upload
 KERNEL := $(shell uname -s|tr A-Z a-z)
 DEB_NAME := ${WORKDIR}/deb_dist/python3-highctidh_${VERSION}-1_${ARCH}.deb
@@ -40,7 +41,7 @@ ${DEB_NAME}:
 
 wheel: ${SDIST_GZ} ${WHEEL_NAME}
 ${WHEEL_NAME}:
-	SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH} python3 -m build --wheel
+	DEB_BUILD_OPTIONS=${DEB_BUILD_OPTIONS} SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH} python3 -m build --wheel
 	-ls -alh ${WHEEL_NAME}
 	-sha256sum ${WHEEL_NAME}
 
@@ -111,4 +112,9 @@ multi-arch-build:
 deb-and-wheel-in-podman:
 	echo "Building ${VERSION} for ${ARCH}...";
 	podman run -v `pwd`:/highctidh --workdir /highctidh --rm -it debian:bookworm bash -c '/highctidh/misc/install-debian-deps.sh && make -f Makefile.packages sdist wheel deb && sha256sum dist/*.{deb,tar.gz,whl} && exit';
+	echo "Built ${VERSION} for ${ARCH}";
+
+deb-and-wheel-in-podman-arch:
+	echo "Building ${VERSION} for ${ARCH}...";
+	podman run --memory=4g --arch ${PODMAN_ARCH} -v `pwd`:/highctidh --workdir /highctidh --rm -it debian:bookworm bash -c '/highctidh/misc/install-debian-deps.sh && make -f Makefile.packages sdist wheel deb && sha256sum dist/*.{deb,tar.gz,whl} && exit';
 	echo "Built ${VERSION} for ${ARCH}";
