--- a/Makefile.packages
+++ b/Makefile.packages
@@ -1,6 +1,8 @@
 VERSION := $(shell cat VERSION)
-export WORKDIR ?= /highctidh
+export WORKDIR ?= $(shell pwd)
 export SOURCE_DATE_EPOCH := $(shell git log -1 --pretty=%ct)
+CC ?=gcc
+DIST :=sid
 ARCH := $(shell uname -m)
 PODMAN_ARCH ?= ${ARCH}
 .PHONY: deb wheel test packages sdist pypi-upload prepare-artifacts-for-upload
@@ -35,13 +37,19 @@ go:
 
 deb: ${SDIST_GZ} ${DEB_NAME}
 ${DEB_NAME}:
+	mkdir -p dist/source
+	mkdir -p build/tmp
 	python3 setup.py --command-packages=stdeb.command sdist_dsc --compat=10 --dist-dir=${WORKDIR}/dist/ --use-premade-distfile=${SDIST_GZ}
 	cp ${WORKDIR}/misc/debian-rules ${WORKDIR}/dist/highctidh-$(VERSION)/debian/rules
-	cd ${WORKDIR}/dist/highctidh-$(VERSION) && CC=${CC} dpkg-buildpackage -rfakeroot -uc -us
+	cd ${WORKDIR}/dist/highctidh-$(VERSION) && DEB_BUILD_OPTIONS=nocheck CC=${CC} dpkg-buildpackage -rfakeroot -uc -us
+	-ls -alh ${DEB_NAME}
+	-sha256sum ${DEB_NAME}
 
 wheel: ${SDIST_GZ} ${WHEEL_NAME}
 ${WHEEL_NAME}:
-	DEB_BUILD_OPTIONS=${DEB_BUILD_OPTIONS} SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH} python3 -m build --wheel
+	mkdir -p dist/source
+	mkdir -p build/tmp
+	SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH} python3 -m build --wheel
 	-ls -alh ${WHEEL_NAME}
 	-sha256sum ${WHEEL_NAME}
 
@@ -50,15 +58,12 @@ test:
 
 sdist: ${SDIST_GZ}
 ${SDIST_GZ}:
-	SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH} flit build --format sdist
+	mkdir -p dist/source
+	mkdir -p build/tmp
+	SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH} flit build \
+			  --format sdist
 	-ls -alh ${SDIST_GZ}
 	-sha256sum ${SDIST_GZ}
-
-sdist-non-deterministic: ${SDIST_GZ}
-${SDIST_GZ}:
-	SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH} python3 setup.py sdist
-	ls -alh ${SDIST_GZ}
-	sha256sum ${SDIST_GZ}
 
 packages: wheel deb
 	echo "Finished building deb and wheel targets for ${ARCH}"
@@ -106,8 +111,8 @@ prepare-artifacts-for-upload:
 # This target calls the other targets present in this makefile from within a Docker container.
 # Our use of QEMU means that the Docker container appears to be running on
 # ${ARCH} regardless of the host CPU architecture.
-multi-arch-build:
-	./docker-multi-arch-package-build.sh
+multi-arch-build: sdist
+	./misc/docker-multi-arch-package-build.sh
 
 deb-and-wheel-in-podman:
 	echo "Building ${VERSION} for ${ARCH}...";
@@ -116,5 +121,19 @@ deb-and-wheel-in-podman:
 
 deb-and-wheel-in-podman-arch:
 	echo "Building ${VERSION} for ${ARCH}...";
-	podman run --memory=4g --arch ${PODMAN_ARCH} -v `pwd`:/highctidh --workdir /highctidh --rm -it debian:bookworm bash -c '/highctidh/misc/install-debian-deps.sh && make -f Makefile.packages sdist wheel deb && sha256sum dist/*.{deb,tar.gz,whl} && exit';
+	podman run --memory=4g --arch ${PODMAN_ARCH} -v `pwd`:/highctidh --workdir /highctidh --rm -it debian:bookworm bash -c '/highctidh/misc/install-debian-deps.sh && /highctidh/misc/docker-fixup.sh && make -f Makefile.packages sdist wheel deb && sha256sum dist/*.{deb,tar.gz,whl} && exit';
+	echo "Built ${VERSION} for ${ARCH}";
+
+deb-and-wheel-in-docker-arch-sid:
+	echo "Building ${VERSION} for ${ARCH}...";
+	docker run \
+		-e "ARCH=${PODMAN_ARCH}" -e "CC=${CC}" \
+		-e "DEBIAN_FRONTEND=noninteractive" \
+		-e "DEB_BUILD_OPTIONS=nocheck" \
+		-e "SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH}" \
+		-e "WORKDIR=/highctidh" \
+		-v `pwd`:/highctidh \
+		--workdir /highctidh \
+		--rm -it debian-${PODMAN_ARCH}-${DIST}-libhighctidh \
+		bash -c 'git config --global --add safe.directory /highctidh && mkdir -p build && make -f Makefile.packages sdist wheel deb && sha256sum dist/*.{deb,tar.gz,whl} && exit';
 	echo "Built ${VERSION} for ${ARCH}";
