--- a/setup.cfg
+++ b/setup.cfg
@@ -9,4 +9,16 @@ keywords = post-quantum cryptography, cryptography, ctidh, csidh
 license = Public Domain
 
 [options]
-python_requires = >=3.10.4
+python_requires = >=3.9
+
+[build]
+build_base = build
+build_temp = build/tmp
+
+[egg_info]
+egg_base = build
+
+[sdist]
+keep_temp = 0
+dist_dir = dist/source
+formats = gztar
