--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "highctidh"
-dynamic = ["version"]
+version = "1.0.2023121400"
 description = "ctype bindings for highctidh"
 readme = "README.md"
 requires-python = ">=3.10.4"
