--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -6,8 +6,7 @@ steps:
       - export CI=true
       - PATH=$PATH:~/.local/bin
       - export WORKDIR=`pwd`
-      - apt update
-      - apt install -y --no-install-recommends make gcc git build-essential
+      - apt update && apt install -y --no-install-recommends make gcc git build-essential 2>&1 > /dev/null
       - CC=gcc make
       - sha256sum *.so
   build-debian-bookworm-clang:
@@ -17,8 +16,7 @@ steps:
       - export CI=true
       - PATH=$PATH:~/.local/bin
       - export WORKDIR=`pwd`
-      - apt update
-      - apt install -y --no-install-recommends make clang git build-essential
+      - apt update && apt install -y --no-install-recommends make clang git build-essential 2>&1 > /dev/null
       - CC=clang make
       - sha256sum *.so
   build-debian-sid-cross:
@@ -28,7 +26,7 @@ steps:
       - export CI=true
       - PATH=$PATH:~/.local/bin
       - export WORKDIR=`pwd`
-      - ./misc/install-debian-sid-cross-deps.sh
+      - ./misc/install-debian-sid-cross-deps.sh 2>&1 > /dev/null
       - ./misc/test-c-lib-cross.sh
   build-debian-bookworm-python:
     group: compile
@@ -37,7 +35,7 @@ steps:
       - export CI=true
       - PATH=$PATH:~/.local/bin
       - export WORKDIR=`pwd`
-      - ./misc/install-debian-deps.sh
+      - ./misc/install-debian-deps.sh 2>&1 > /dev/null
       - mkdir -p {dist/source,build/tmp}
       - make -f Makefile.packages packages
       - dpkg -i dist/python3-highctidh_*.deb
@@ -53,7 +51,7 @@ steps:
       - export CI=true
       - PATH=$PATH:~/.local/bin
       - export WORKDIR=`pwd`
-      - ./misc/install-arch-deps.sh
+      - ./misc/install-arch-deps.sh 2>&1 > /dev/null
       - CC=clang make -f Makefile.packages wheel
       - make
       - ls -alh dist/*.whl
@@ -66,5 +64,5 @@ steps:
       - export CI=true
       - PATH=$PATH:~/.local/bin
       - export WORKDIR=`pwd`
-      - ./misc/install-debian-go-deps.sh
+      - ./misc/install-debian-go-deps.sh 2>&1 > /dev/null
       - make -f Makefile.packages go-test-cross
