Update CI config
This changeset updates the continuous integration configuration for the
codeberg woodpecker CI. It also introduces a basic Github Action.

- Passing but not currently enabled woodpecker configuration files are
  in `CI/*.yml`
- C library: `.woodpecker/alpine.yml` tests if the project compiles for
  the most basic build
- Golang: `.woodpecker/golang-test.yml` tests a native
  `amd64`/`x86_64` build of the C code as used in the golang bindings.
  It additionally runs a very basic golang test suite
- Golang: `.woodpecker/golang.yml` runs if the `golang-test.yml` tests
  pass. It cross compiles golang `1.21`, `1.20`, and `1.19` for `amd64`,
  `arm32v5`, `arm32v6`, `arm32v7`, `i386`, `arm64`, `mips64`,
  `mips64le`, `mips`, `mipsle`, `ppc64`, `ppc64le`, `riscv64`, and
  `s390x` on Debian GNU/Linux `bookworm` with `clang`
- Python: `.woodpecker/qemu-python-clang-setup.yml` uses `qemu` to
  compile native builds with Python `3.12`, `3.11`, `3.10`, and `3.9`
  for `amd64`, `arm32v5`, `arm32v6`, `arm32v7`, `i386`, `arm64`,
  `mips64le`, `ppc64le`, and `s390x` on Debian GNU/Linux `bookworm` with
  `clang`
- Python: `.woodpecker/qemu-python-clang-test.yml` runs if
  `qemu-python-clang-setup.yml` completes successfully. It runs a
  versioned `pytest` for each Python version of `3.12`, `3.11`, `3.10`,
  and `3.9` for each highctidh field size of `511`, `512`, `1024`, and
  `2048` as native `pytest` tests for  `amd64`, `arm32v5`, `arm32v6`,
  `arm32v7`, `i386`, `arm64`, `mips64le`, `ppc64le`, and `s390x` on
  Debian GNU/Linux `bookworm`
- Github Actions: `.github/workflows/makefile.yml` tests compiling the
  portable and the non-portable highctidh on the latest Ubuntu release

--- a/CI/debian-cross.yml
+++ b/CI/debian-cross.yml
@@ -11,7 +11,7 @@ matrix:
 
 steps:
   debian-${DIST}-cross-${CC}:
-    group: compile-debian-${DIST}-cross
+    group: debian-${DIST}-cross-${CC}
     image: debian:${DIST}
     commands:
       - export CI=true
@@ -20,3 +20,8 @@ steps:
       - export CC=${CC}
       - ./misc/install-debian-${DIST}-cross-deps.sh
       - ./misc/test-c-lib-cross-${CC}.sh
+
+depends_on:
+  - debian
+
+runs_on: [ success, failure ]
