--- a/.woodpecker/alpine.yml
+++ b/.woodpecker/alpine.yml
@@ -11,7 +11,7 @@ matrix:
 
 steps:
  alpine-${ALPINE_VERSION}-${CC}:
-   group: compile-deps-alpine-${ALPINE_VERSION}-${CC}
+   group: alpine-${ALPINE_VERSION}-${CC}
    image: alpine:${ALPINE_VERSION}
    commands:
      - export CI=true
@@ -22,3 +22,4 @@ steps:
      - CC=$CC make
      - ls -alh *.so
      - sha256sum *.so
+
