fix alpine woodpecker issue

--- a/.woodpecker/alpine.yml
+++ b/.woodpecker/alpine.yml
@@ -18,6 +18,7 @@ steps:
      - export WORKDIR=`pwd`
      - export CC=${CC}
      - ./misc/install-arch-deps.sh
+     - mkdir dist
      - CC=$CC make
      - ls -alh dist/*.so
      - sha256sum dist/*.so
