--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-build/
+build/*
 .eggs
 __pycache__/
-deb_dist/
+deb_dist/*
 */__pycache__/
-dist/
+dist/*
 highctidh.egg-info/
 *.o
 *.pyc
@@ -11,6 +11,9 @@ highctidh.egg-info/
 *.so
 *.a
 *.swp
+src/dist/*
+src/deb_dist/*
+src/build/*
 test1024
 test2048
 test511
