--- a/.github/workflows/ubuntu-cross-compile-test.yml
+++ b/.github/workflows/ubuntu-cross-compile-test.yml
@@ -2,9 +2,9 @@ name: Ubuntu C library cross compile
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "mv-src" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "mv-src" ]
 
 jobs:
   build:
