--- a/.github/workflows/ubuntu-deb-clang-gcc-pytest.yml
+++ b/.github/workflows/ubuntu-deb-clang-gcc-pytest.yml
@@ -1,10 +1,9 @@
 name: Build Debian GNU/Linux package and run pytest
 
 on:
-  push:
-    branches: [ "main", "mv-src" ]
+  push
   pull_request:
-    branches: [ "main", "mv-src" ]
+    branches: [ "main" ]
 
 jobs:
   build:
