--- a/.github/workflows/ubuntu-golang-cross-compile-test.yml
+++ b/.github/workflows/ubuntu-golang-cross-compile-test.yml
@@ -1,10 +1,9 @@
 name: Go cross compile
 
 on:
-  push:
-    branches: [ "main", "mv-src" ]
+  push
   pull_request:
-    branches: [ "main", "mv-src" ]
+    branches: [ "main" ]
 
 jobs:
   build:
