--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -2,10 +2,10 @@
 name = highctidh
 version = file: VERSION
 author = Jacob Appelbaum
-description = Python ctype bindings for highctidh
-long_description = Python ctype bindings for highctidh released in 2021
+description = highctidh bindings with included C library
+long_description = Python highctidh ctype bindings with included C library
 url = https://codeberg.org/vula/highctidh
-keywords = post-quantum cryptography, cryptography, ctidh, csidh
+keywords = post-quantum cryptography, cryptography, ctidh, csidh, C, highctidh
 license = Public Domain
 
 [options]
