Allow building on amd64 with the portable backend

--- a/src/Makefile.packages
+++ b/src/Makefile.packages
@@ -56,9 +56,9 @@ deb: ${SDIST_GZ} ${DEB_NAME}
 ${DEB_NAME}:
 	-mkdir -p dist/source
 	-mkdir -p build/tmp
-	python3 setup.py --command-packages=stdeb.command sdist_dsc --compat=10 --dist-dir=${WORKDIR}/dist/ --use-premade-distfile=${SDIST_GZ}
+	HIGHCTIDH_PORTABLE=$(HIGHCTIDH_PORTABLE) python3 setup.py --command-packages=stdeb.command sdist_dsc --compat=10 --dist-dir=${WORKDIR}/dist/ --use-premade-distfile=${SDIST_GZ}
 	cp debian-rules ${WORKDIR}/dist/highctidh-$(VERSION)/debian/rules
-	cd ${WORKDIR}/dist/highctidh-$(VERSION) && DEB_BUILD_OPTIONS=nocheck CC=${CC} dpkg-buildpackage -rfakeroot -uc -us
+	cd ${WORKDIR}/dist/highctidh-$(VERSION) && DEB_BUILD_OPTIONS=nocheck CC=${CC} HIGHCTIDH_PORTABLE=$(HIGHCTIDH_PORTABLE) dpkg-buildpackage -rfakeroot -uc -us
 	-ls -alh ${WORKDIR}/dist/*.deb
 	-sha256sum ${WORKDIR}/dist/*.deb
 
